Added the layout and functionality to add the new contacts it is happening only for the runtime

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="card_background">#353A55</color>
+    <color name="layout_background">#1B1F3B</color>
+    <color name="text_Hint">#FFC107</color>
 </resources>
