--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,18 @@
     </style>
 
     <style name="Theme.RecyclerView" parent="Base.Theme.RecyclerView" />
+
+<!--    <style name="CustomDialog" parent="Theme.AppCompat.Dialog">-->
+<!--        <item name="android:windowMinWidthMajor">100%</item>-->
+<!--        <item name="android:windowMinWidthMinor">100%</item>-->
+<!--    </style>-->
+
+    <style name="CustomDialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowMinWidthMajor">100%</item>-->
+        <item name="android:windowMinWidthMinor">100%</item>
+    </style>
+
+
 </resources>
