--- a/app/src/main/res/layout/add_update_layout.xml
+++ b/app/src/main/res/layout/add_update_layout.xml
@@ -6,86 +6,97 @@
     android:layout_height="wrap_content"
     android:background="@android:color/transparent">
 
-<androidx.cardview.widget.CardView
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-app:cardCornerRadius="15dp"
-app:cardElevation="20dp"
-app:cardBackgroundColor="@color/card_background"
-app:cardUseCompatPadding="true"
-app:layout_constraintBottom_toBottomOf="parent"
-app:layout_constraintEnd_toEndOf="parent"
-app:layout_constraintStart_toStartOf="parent"
-app:layout_constraintTop_toTopOf="parent"
-app:layout_constraintVertical_bias="0.135"
-android:layout_margin="15dp">
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="15dp">
-
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Contact"
-        android:layout_gravity="center"
-        android:textSize="24sp"
-        android:padding="20dp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/etName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Enter Name"
-        android:inputType="text"
-        android:textColor="@color/white"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:layout_marginBottom="10dp"
-        android:padding="25dp"
-        android:textColorHint="@color/text_Hint"
-        android:textSize="24sp">
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="@dimen/dim_15"
+            app:cardElevation="@dimen/dim_20"
+            app:cardBackgroundColor="@color/card_background"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.135"
+            android:layout_margin="@dimen/dim_15">
 
-    </EditText>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="@dimen/dim_50"
+                android:padding="@dimen/dim_15">
 
-    <EditText
-        android:id="@+id/etNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:padding="25dp"
-        android:layout_marginBottom="15dp"
-        android:textColorHint="@color/text_Hint"
-        android:hint="Enter Number"
-        android:textColor="@color/white"
-        android:layout_gravity="center"
-        android:textSize="24sp"
-        android:layout_marginTop="15dp"/>
+                <TextView
+                    android:id="@+id/tvTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add Contact"
+                    android:layout_gravity="center"
+                    android:textSize="@dimen/font_size_24"
+                    android:padding="@dimen/dim_20"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="@dimen/dim_5"
+                    />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:id="@+id/btnAction"
-        android:layout_gravity="center"
-        android:backgroundTint="#AB0E40"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:text="Add"
-        >
+                <EditText
+                    android:id="@+id/etName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter Name"
+                    android:inputType="text"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginBottom="@dimen/dim_5"
+                    android:padding="@dimen/dim_15"
+                    android:textColorHint="@color/text_Hint"
+                    android:textSize="@dimen/font_size_24">
 
-    </Button>
+                </EditText>
 
-</LinearLayout>
+                <EditText
+                    android:id="@+id/etNumber"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:padding="@dimen/dim_15"
+                    android:layout_marginBottom="@dimen/dim_15"
+                    android:textColorHint="@color/text_Hint"
+                    android:hint="Enter Number"
+                    android:textColor="@color/white"
+                    android:layout_gravity="center"
+                    android:textSize="@dimen/font_size_24"
+                    android:layout_marginTop="@dimen/dim_5"/>
 
-</androidx.cardview.widget.CardView>
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/dim_10"
+                    android:id="@+id/btnAction"
+                    android:layout_gravity="center"
+                    android:backgroundTint="#AB0E40"
+                    android:textSize="@dimen/font_size_20"
+                    android:textStyle="bold"
+                    android:text="Add">
+
+                </Button>
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+
+    </ScrollView>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
