--- a/app/src/main/res/layout/contact_row.xml
+++ b/app/src/main/res/layout/contact_row.xml
@@ -3,55 +3,63 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:padding="11dp">
-
-            <ImageView
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:id="@+id/imContact"
-                android:contentDescription="contact info"
-                android:src="@drawable/employee">
-            </ImageView>
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="11dp"
-                android:orientation="vertical">
+                android:gravity="center_vertical"
+                android:padding="@dimen/dim_11">
 
-                <TextView
-                    android:id="@+id/Contact"
+                <ImageView
+                    android:layout_width="@dimen/dim_75"
+                    android:layout_height="@dimen/dim_75"
+                    android:id="@+id/imContact"
+                    android:contentDescription="contact info"
+                    android:src="@drawable/employee">
+                </ImageView>
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="24sp"
-                    android:text="Contact"
-                    android:textStyle="bold">
-                </TextView>
+                    android:layout_marginStart="@dimen/dim_11"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/ContactNumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="24sp"
-                    android:text="Contact Number"
-                    android:textStyle="bold">
-                </TextView>
+                    <TextView
+                        android:id="@+id/Contact"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/font_size_24"
+                        android:text="Contact"
+                        android:textStyle="bold">
+                    </TextView>
+
+                    <TextView
+                        android:id="@+id/ContactNumber"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/font_size_24"
+                        android:text="Contact Number"
+                        android:textStyle="bold">
+                    </TextView>
+
+                </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
 
 
 
+        </androidx.cardview.widget.CardView>
 
-    </androidx.cardview.widget.CardView>
+
+    </ScrollView>
+
 
 </LinearLayout>
